--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
+    "@types/formidable": "^3.4.6",
+    "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.5"
