--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,8 @@
     "@vueuse/nuxt": "^13.9.0",
     "axios": "^1.13.2",
     "bree": "^9.2.4",
+    "csv-parse": "^6.1.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "nuxt": "^4.2.1",
