--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/lucide": "^1.2.75",
     "@iconify-json/simple-icons": "^1.2.60",
     "@nuxt/ui": "^4.2.1",
+    "@pinia/nuxt": "^0.11.3",
     "@unovis/ts": "^1.6.2",
     "@unovis/vue": "^1.6.2",
     "@vueuse/nuxt": "^13.9.0",
@@ -25,6 +26,7 @@
     "date-fns": "^4.1.0",
     "formidable": "^3.5.4",
     "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
