Gitignore and RAM update in Docker compose

--- a/mojaloop_core/docker-compose.yml
+++ b/mojaloop_core/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     environment:
       - AUTH_ENABLED=FALSE
       - CURRENT_MODE=hub
+      - NODE_OPTIONS=--max-old-space-size=8192
     command: npm start
     volumes:
       - "./spec_files:/opt/app/spec_files"
